<resources>
    <string name="app_name">Administrador de tareas</string>

    <!-- Text View -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="start_session">Iniciar sesión</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="olvide_contrasenia">Olvide mi contraseña</string>
    <string name="record_user">Recordar mi usuario en este dispositivo</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="name_complete">Nombre completo</string>

    <!-- BOTONES -->

    <string name="botton_registrarme">Registrarme</string>
    <string name="botton_yaTengoCuenta">Ya tengo una cuenta</string>
    <string name="botton_iniciar">Iniciar</string>
    <string name="botton_No_tengoCuenta">No tengo una cuenta</string>
    <string name="recoveryPass">Recuperar contraseña</string>
    <string name="msj_recuperar">Recuperar</string>
    <string name="mis_tareas">Mis tareas</string>
    <string name="agrega_una_foto">Agrega una foto</string>
    <string name="nueva_tarea">Nueva tarea</string>


</resources>
